--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "social-proof-section-master",
+  "name": "social-proof-section",
   "version": "1.0.0",
-  "description": "The Social proof section coding challenge, created on 6 June 2021",
+  "description": "Updated on 17 August 2021",
   "main": "index.js",
   "scripts": {
-    "devserver": "browser-sync start --server --port='8080' --watch --no-inject-changes",
+    "devserver": "browser-sync start --server  --watch --port='8080' --no-inject-changes",
     "watch:sass": "sass scss/main.scss css/style.css --watch --no-source-map",
     "start": "npm-run-all --parallel devserver watch:sass",
+    
     "compile:sass": "sass scss/main.scss css/style.css --no-source-map",
-    "prefix:css": "postcss --use autoprefixer -b 'last 20 versions' css/style.css --output css/style.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.css --output css/style.css",
     "prettier": "npx prettier --write .",
-    "build": "npm-run-all compile:sass  prefix:css prettier"
+    "prettier:html": "npx prettier --write *.html",
+    "comb:css": "csscomb css/ scss/ -v",
+    "comb:sass": "csscomb scss/ -v",
+    "compressed:css": "sass scss/main.scss css/style.min.css --style=compressed --no-source-map",
+    "format": "npm-run-all prettier:html comb:sass",
+    "build": "npm-run-all compile:sass  prettier prefix:css comb:css compressed:css"
   },
-  "keywords": [
-    "Frontend Mentor Challenge",
-    "Social Proof Section"
-  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vanzasetia/social-proof-section.git"
+  },
+  "keywords": [],
   "author": "Vanza Setia",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://github.com/vanzasetia/social-proof-section#readme"
 }
