--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "Updated on 17 August 2021",
   "main": "index.js",
   "scripts": {
+    "markserv": "markserv README.md",
+    
     "devserver": "browser-sync start --server  --watch --port='8080' --no-inject-changes",
     "watch:sass": "sass scss/main.scss css/style.css --watch --no-source-map",
     "start": "npm-run-all --parallel devserver watch:sass",
     
+    "prettier:html": "npx prettier --write *.html",
+    "comb:sass": "csscomb scss/ -v",
+    "format": "npm-run-all prettier:html comb:sass",
+    
     "compile:sass": "sass scss/main.scss css/style.css --no-source-map",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.css --output css/style.css",
     "prettier": "npx prettier --write .",
-    "prettier:html": "npx prettier --write *.html",
     "comb:css": "csscomb css/ scss/ -v",
-    "comb:sass": "csscomb scss/ -v",
     "compressed:css": "sass scss/main.scss css/style.min.css --style=compressed --no-source-map",
-    "format": "npm-run-all prettier:html comb:sass",
     "build": "npm-run-all compile:sass  prettier prefix:css comb:css compressed:css"
   },
   "repository": {
